--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: arial;
+  font-family: Times New Roman;
 }
 
 body {
@@ -72,6 +72,8 @@ nav ul li:hover ul {
 }
 
 .content h1, h2, h3, p {
+  color: black;
+  background-color: fff;
   padding: 10px;
 }
 
