--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-body {
-  background-size: cover;
-  height: 100%;
-}
-
 nav {
   width: 100%;
   height: 69px;
@@ -42,22 +37,6 @@ nav ul li ul {
   width:140px;
 }
 
-nav ul li ul li {
-  width:140px;
-}
-
-nav ul li ul {
-  display:none;
-}
-
-nav ul li:hover ul {
-  display:block;
-}
-
-.kuva {
-  padding: 40px;
-}
-
 .content {
   width: 900px;
   background-color: rgba(230,230,230,0.7);
@@ -67,12 +46,6 @@ nav ul li:hover ul {
 
 .content h1, h2, h3, p {
   padding: 10px;
-}
-
-.right {
-  float: right;
-}
-
-.small {
-  font-size: 10px;
+  color: red;
+  background-color; white;
 }
