--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("Tausta");
+  background-image: url("Sivuston taustakuva.jpg");
   background-size: cover;
   height: 100%;
 
