--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
-  background-image: url("Sivuston taustakuva.jpg");
+  background-image: url("");
   background-size: cover;
   height: 100%;
+}
 
 nav {
   width: 100%;
