--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ nav ul li ul {
   width:140px;
 }
 
+nav ul li:hover ul {
+  display:block;
+}
+
 .content {
   width: 900px;
   background-color: rgba(230,230,230,0.7);
