--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("taustakuva.jpg");
+  background-image: url("taustakuva.jp");
   background-size: cover;
   height: 100%;
 }
